Bug 511228 - Drag and drop stopped working after update to 6.5.0
Summary: Drag and drop stopped working after update to 6.5.0
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.0
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 511573 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-27 17:25 UTC by youcantseemeymfb@gmail.com
Modified: 2025-12-05 12:48 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2 or Frameworks 6.21
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description youcantseemeymfb@gmail.com 2025-10-27 17:25:27 UTC
SUMMARY
when searching for a file, I used to be able to drag and drop files right from the search results into another app or the desktop or the panel. Now after update I cannot do it. No drag and drop operation would work for any type of search result, neither file nor applications. 
STEPS TO REPRODUCE
1. update to plasma 6.5.0
2. search for a file in Krunner
3. drag the file from the search result to the desktop or an open dolphin window

OBSERVED RESULT

Nothing happens. Drag and drop is not initiated

EXPECTED RESULT
The item should be dragged and the copy/move/link popup should appear.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 6.17.5-2-cachyos (64-bit)
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
I have confirmed this is due to update by rolling back to 6.4.5 where it is working. And then back to the updated version where it again stopped working.
Comment 1 David Redondo 2025-10-28 09:58:04 UTC
I've biscted this down to https://invent.kde.org/plasma/milou/-/commit/95f7c9fa805776123a763c08344665f3b272e87e which is surprising
Comment 2 Bug Janitor Service 2025-10-28 10:58:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/milou/-/merge_requests/96
Comment 3 David Redondo 2025-11-04 10:26:17 UTC
Git commit cd0b5190629d3e75c4016c0f64157e1376fb0b50 by David Redondo.
Committed on 04/11/2025 at 10:19.
Pushed by davidre into branch 'Plasma/6.5'.

Shadow Resultsmodel::getMimeData

Due to some unknown reason QML will not call the function
and just stops executing the qml function. As a workaround
shadow the function.

M  +8    -0    lib/resultsmodel.h

https://invent.kde.org/plasma/milou/-/commit/cd0b5190629d3e75c4016c0f64157e1376fb0b50
Comment 4 David Redondo 2025-11-04 15:03:58 UTC
Can we keep it open, it was only pushed to 6.5 branch
Comment 5 cwo 2025-12-01 18:58:49 UTC
*** Bug 511573 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2025-12-05 11:37:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/krunner/-/merge_requests/210
Comment 7 User110350 2025-12-05 11:50:06 UTC
I'm on 6.5.3 and this now seems to have been addressed and fixed. I just tested and dragging to my panel from KRunner works again.
Comment 8 David Redondo 2025-12-05 12:35:04 UTC
Yes as it's documented it was fixed in 6.5.2
Comment 9 Nicolas Fella 2025-12-05 12:48:12 UTC
Git commit 02c30b113278cc219311993aae7a86566ca73693 by Nicolas Fella.
Committed on 05/12/2025 at 11:37.
Pushed by nicolasfella into branch 'master'.

ResultsModel: Include QMimeData

It's used as the return type of an invokable, so it must be fully defined

M  +1    -0    src/model/resultsmodel.h

https://invent.kde.org/frameworks/krunner/-/commit/02c30b113278cc219311993aae7a86566ca73693