Shadow Resultsmodel::getMimeData

Due to some unknown reason QML will not call the function
and just stops executing the qml function. As a workaround
shadow the function.

BUG:511228
FIXED-IN:6.5.1